src/test/ui/const-generics/const-param-before-other-params.full.stderr
error: lifetime parameters must be declared prior to const parameters
  --> $DIR/const-param-before-other-params.rs:5:21
   |
LL | fn bar<const X: (), 'a>(_: &'a ()) {
   |       --------------^^- help: reorder the parameters: `<'a, const X: ()>`
   |
   = note: the expected order for parameters is: lifetimes, then consts and types

error: aborting due to previous error

